[tool.poetry]
name = "repl_python3_Les-Accidents-Lore"
version = "0.1.0"
description = ""
authors = ["jwt2706 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
keyboard = "^0.13.5"
playsound = "^1.3.0"
pyfiglet = "^0.8.post1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
